tests/did-you-mean.stderr
error: 
  ┌─ test:1:1
  │
1 │ print "hello"
  │ ^^^^^ cannot find `print`
  │
  = did you mean `show`?: `show`
  = for more information, see https://wipple.dev/playground/?lesson=errors/undefined-name

error: 
  ┌─ test:2:6
  │
2 │ show hello
  │      ^^^^^ cannot find `hello`
  │
  = if you meant to provide text here, try using quotes: `"hello"`: `"hello"`
  = for more information, see https://wipple.dev/playground/?lesson=errors/undefined-name

error: 
  ┌─ test:3:13
  │
3 │ sum : 1 + 2 // comment
  │             ^^ cannot find `//`
  │
  = comments in Wipple begin with `--`: `--`
  = for more information, see https://wipple.dev/playground/?lesson=errors/undefined-name

error: 
  ┌─ test:3:16
  │
3 │ sum : 1 + 2 // comment
  │                ^^^^^^^ cannot find `comment`
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/undefined-name

